--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -612,7 +612,7 @@
                   <th scope="row">{{ $index + 1 }}</th>
                   <!-- <td><p class="text-center">{{ x.no_cia }}</p></td>
                   <td><p class="text-center">{{ x.grupo }}</p></td> -->
-                  <td><p class="text-center">{{ new Date(x.fecha).getDate() }}</p></td>
+                  <td><p class="text-center">{{  Date(x.fecha).getDate() }}</p></td>
                   <td><p class="text-center">{{ x.no_cliente }}</p></td>
                   <td><p class="text-center">{{ x.no_factu }}</p></td>
                   <td><p class="text-center">{{ x.estatus }}</p></td>
