--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -329,6 +329,8 @@
                       <th scope="col"><p class="text-center">Cantidad</p></th>
                       <th scope="col"><p class="text-center">Precio por unidad</p></th>
                       <th scope="col"><p class="text-center">Total</p></th>
+                      <th scope="col"><p class="text-center">Precio por unidad</p></th>
+                      <th scope="col"><p class="text-center">Total</p></th>
                       <th scope="col"><p class="text-center">Opcion</p></th>
                       </tr>
                   </thead>
@@ -341,6 +343,9 @@
                           <td><p class="text-center">{{ x.CANTIDAD }}</p></td>
                           <td><p class="text-right">{{ formato(2,x.PRECIO) }}</p></td>
                           <td><p class="text-right">{{ formato(2,(x.PRECIO * x.CANTIDAD)) }}</p></td>
+                          <td><p class="text-right">{{ formato(2,x.precio_usd) }}</p></td>
+                          <td><p class="text-right">{{ formato(2,(x.precio_usd * x.CANTIDAD)) }}</p></td>
+
                           <td >
                             <!-- <button type="button" class="btn btn-danger" ng-click="removeArt($index);">X</button> -->
                             <!-- <p class="text-center">
@@ -612,7 +617,7 @@
                   <th scope="row">{{ $index + 1 }}</th>
                   <!-- <td><p class="text-center">{{ x.no_cia }}</p></td>
                   <td><p class="text-center">{{ x.grupo }}</p></td> -->
-                  <td><p class="text-center">{{  Date(x.fecha).getDate() }}</p></td>
+                  <td><p class="text-center">{{  formatDate(x.fecha) }}</p></td>
                   <td><p class="text-center">{{ x.no_cliente }}</p></td>
                   <td><p class="text-center">{{ x.no_factu }}</p></td>
                   <td><p class="text-center">{{ x.estatus }}</p></td>
