--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -134,6 +134,8 @@
                         <th scope="col"><p class="text-center">Cantidad</p></th>
                         <th scope="col"><p class="text-center">Precio por unidad</p></th>
                         <th scope="col"><p class="text-center">Total</p></th>
+                        <th scope="col"><p class="text-center">Precio por unidad</p></th>
+                        <th scope="col"><p class="text-center">Total</p></th>
                         <th scope="col"><p class="text-center">Opcion</p></th>
                         </tr>
                     </thead>
@@ -146,6 +148,9 @@
                             <td><p class="text-center">{{ x.CANTIDAD }}</p></td>
                             <td><p class="text-right">{{ formato(2,x.PRECIO) }}</p></td>
                             <td><p class="text-right">{{ formato(2,(x.PRECIO * x.CANTIDAD)) }}</p></td>
+                            <td><p class="text-right">{{ formato(2,x.precio_usd) }}</p></td>
+                            <td><p class="text-right">{{ formato(2,(x.precio_usd * x.CANTIDAD)) }}</p></td>
+
                             <td >
                               <!-- <button type="button" class="btn btn-danger" ng-click="removeArt($index);">X</button> -->
                               <!-- <p class="text-center">
@@ -157,6 +162,7 @@
                           </tr>
                     </tbody>
                     </table>
+
 
               </div>
 
