--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -630,7 +630,7 @@
                   <th scope="row">{{ $index + 1 }}</th>
                   <!-- <td><p class="text-center">{{ x.no_cia }}</p></td>
                   <td><p class="text-center">{{ x.grupo }}</p></td> -->
-                  <td><p class="text-center">{{  formatDate(x.fecha) }}</p></td>
+                  <td><p class="text-center">{{  x.fecha }}</p></td>
                   <td><p class="text-center">{{ x.no_cliente }}</p></td>
                   <td><p class="text-center">{{ x.no_factu }}</p></td>
                   <td><p class="text-center">{{ x.estatus }}</p></td>
