--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -12,13 +12,11 @@
         </button>
       </div>
       <div class="modal-body">
-        <div class="card-header" ng-show="!clienteValido" >
-          Advertencia:
-          <strong>{{clientInvalidoMsg}}</strong>
-            <!-- <span class="float-right"> <strong>Estatus:</strong> {{pedido.estatus}}</span> -->
 
+          <div class="alert alert-danger"  ng-show="!clienteValido" role="alert">
+            Advertencia:
+            <strong>{{clientInvalidoMsg}}</strong>
           </div>
-
 
         <ul class="nav nav-tabs mb-4">
             <li class="nav-item">
