--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -13,7 +13,7 @@
       </div>
       <div class="modal-body">
 
-          <div class="alert alert-danger"  ng-show="!clienteValido" role="alert">
+          <div class="alert alert-danger"  ng-show="!clienteValido && !hasUserClient" role="alert">
             Advertencia:
             <strong>{{clientInvalidoMsg}}</strong>
           </div>
