--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -638,7 +638,7 @@
                     <!-- <button type="button" class="btn btn-danger" ng-click="removeArt($index);">X</button> -->
 
                     <!-- <button type="button" class="btn btn-danger" ></button> -->
-                    <i class="fa fa-trash" style="cursor: pointer;" ng-show="estatus_id==0" data-toggle="modal" data-target="#modalConfirm" ng-click="confirmModal(x.ID);"  ></i>
+                    <i class="fa fa-trash" style="cursor: pointer;" ng-show="x.estatus_id==0" data-toggle="modal" data-target="#modalConfirm" ng-click="confirmModal(x.ID);"  ></i>
 
 
                     <!-- <button type="button" class="btn btn-default"  ></button> -->
