--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -109,10 +109,9 @@
             <div class="container" ng-show="tabsIndex == 1" >
 
 
-              <div class="row mt-3 mb-5">
+              <div class="row mt-3 mb-5" >
 
                 <div class="col-12" ng-show="ID == null">
-                  <label></label>
                   <button type="button" class="btn btn-info" ng-click="addPedidoV2()"  >Abrir Pedido</button>
                 </div>
 
@@ -130,7 +129,7 @@
 
                 <div class="col-4">
                   <label></label>
-                  <button type="button" class="btn btn-success"  data-toggle="modal" data-target="#modalproduct">Agregar Productos</button>
+                  <button type="button" class="btn btn-success"  ng-show="ID != null" data-toggle="modal" data-target="#modalproduct">Agregar Productos</button>
                 </div>
 
               </div>
