--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -442,59 +442,11 @@
         </div>
         <div class="modal-body">
           <div class="container">
-            <div id="infoProduct" class="row" >
 
-
-                <div class="col-4">
-                  <label>Codigo</label><br>
-                  <span >{{articulo.COD_PRODUCTO}}</span>
-                </div>
-                <div class="col-4">
-                  <label>Existencia</label><br>
-                  <span >{{articulo.existencia}}</span>
-                </div>
-                <div class="col-4">
-                  <label>Cantidad</label>
-                  <input type="number"  min="1" max="{{articulo.existencia}}" ng-model="articulo.CANTIDAD" class="form-control" placeholder="cantidad" onkeypress='return event.charCode >= 48 && event.charCode <= 57' >
-                </div>
-
-                <!-- <div class="col-12">
-                  <label></label>
-                  <button type="button" ng-disabled="productIndex==-1" class="btn btn-success" style="margin-top: 32px;" ng-click="addArtPedido();">Agregar</button>
-                </div> -->
-
-                <div class="row col-sm-12 col-md-12 col-lg-12">
-                  <div class="col-sm-12 col-md-12 col-lg-12 mt-3 ">
-
-                    <label>Precios</label>
-                  </div>
-                  <div class="col-3">
-                    <label>Por unidad Bs.S</label><br>
-                    <span >{{formato(2,(articulo.PRECIO)? articulo.PRECIO:0)}}</span>
-
-                  </div>
-                  <div class="col-3">
-                    <label>Total Bs.S</label><br>
-                    <span >{{formato(2,(articulo.PRECIO)? (articulo.PRECIO  * articulo.CANTIDAD):0)}}</span>
-
-                  </div>
-                  <div class="col-3">
-                    <label>Por unidad USD</label><br>
-                    <span >{{formato(3,(articulo.precio_usd)? articulo.precio_usd:0)}}</span>
-
-                  </div>
-                  <div class="col-3">
-                    <label>Total USD</label><br>
-                    <span >{{formato(3,(articulo.precio_usd)? (articulo.precio_usd  * articulo.CANTIDAD):0)}}</span>
-
-                  </div>
-                </div>
-
-            </div>
           </div>
 
           <div class="modal-body-he">
-
+            <button id="btnProductInfo" style="display:none" data-toggle="modal" data-target="#modalInfoProduct"></button>
             <div class="container">
 
               <div class="col-sm-12 col-md-12 col-lg-12">
@@ -559,6 +511,100 @@
       </div>
     </div>
   </div>
+
+
+  <div class="modal fade" id="modalInfoProduct">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h4 class="modal-title" style="text-transform: capitalize;" >{{articulo.nombre_producto.toLowerCase()}}</h4>
+          <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+
+        </div>
+        <div class="modal-body">
+
+          <div class="container">
+            <div class="row pb-2 p-2" ng-if="clientIndex != -1">
+                <div class="col-md-6">
+                  <p class="font-weight-bold mb-4">Informacion</p>
+                  <p class="mb-1"><span class="text-muted">Principal Activo: </span> {{articulo.princ_activo}}</p>
+                  <p class="mb-1"><span class="text-muted">Codigo: </span> {{articulo.cod_producto}}</p>
+                  <p class="mb-1"><span class="text-muted">Fecha Vencimiento: </span> {{articulo.fecha_vence}}</p>
+                  <p class="mb-1"><span class="text-muted">Existencia: </span> {{articulo.existencia}}</p>
+                </div>
+
+                <div class="col-md-6 text-right">
+                    <p class="font-weight-bold mb-4">Detalles</p>
+                    <p class="mb-1"><span class="text-muted">Proveedor: </span> {{articulo.proveedor}}</p>
+                    <p class="mb-1"><span class="text-muted">Regulado: </span> {{articulo.ind_regulado}}</p>
+                    <p class="mb-1"><span class="text-muted">Impuesto: </span> {{articulo.ind_impuesto}}</p>
+                    p class="mb-1"><span class="text-muted">Psicotropico: </span> {{articulo.ind_psicotropico}}</p>
+                </div>
+            </div>
+
+            <div id="infoProduct" class="row" >
+              <!--
+
+
+                <div class="col-4">
+                  <label>Codigo</label><br>
+                  <span >{{articulo.COD_PRODUCTO}}</span>
+                </div>
+                <div class="col-4">
+                  <label>Existencia</label><br>
+                  <span >{{articulo.existencia}}</span>
+                </div> -->
+                <div class="col-6">
+                  <label>Cantidad</label>
+                  <input type="number"  min="1" max="{{articulo.existencia}}" ng-model="articulo.CANTIDAD" class="form-control" placeholder="cantidad" onkeypress='return event.charCode >= 48 && event.charCode <= 57' >
+                </div>
+
+                <!-- <div class="col-12">
+                  <label></label>
+                  <button type="button" ng-disabled="productIndex==-1" class="btn btn-success" style="margin-top: 32px;" ng-click="addArtPedido();">Agregar</button>
+                </div> -->
+
+                <div class="row col-sm-12 col-md-12 col-lg-12">
+                  <div class="col-sm-12 col-md-12 col-lg-12 mt-3 ">
+
+                    <label>Precios</label>
+                  </div>
+                  <div class="col-3">
+                    <label>Por unidad Bs.S</label><br>
+                    <span >{{formato(2,(articulo.PRECIO)? articulo.PRECIO:0)}}</span>
+
+                  </div>
+                  <div class="col-3">
+                    <label>Total Bs.S</label><br>
+                    <span >{{formato(2,(articulo.PRECIO)? (articulo.PRECIO  * articulo.CANTIDAD):0)}}</span>
+
+                  </div>
+                  <div class="col-3">
+                    <label>Por unidad USD</label><br>
+                    <span >{{formato(3,(articulo.precio_usd)? articulo.precio_usd:0)}}</span>
+
+                  </div>
+                  <div class="col-3">
+                    <label>Total USD</label><br>
+                    <span >{{formato(3,(articulo.precio_usd)? (articulo.precio_usd  * articulo.CANTIDAD):0)}}</span>
+
+                  </div>
+                </div>
+
+            </div>
+
+          </div>
+
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
+          <button type="button" class="btn btn-danger" ng-click="delPedido()" data-dismiss="modal">Aceptar</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
 
 
 <div class="modal fade" id="modalConfirm">
