--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -3,7 +3,7 @@
 </div>
 
 <div class="modal fade" id="addPedidoModal" tabindex="-1" role="dialog" aria-labelledby="addPedidoModalLabel" aria-hidden="true">
-  <div class="modal-dialog  mw-100 w-75" role="document">
+  <div class="modal-dialog  mw-100 modal-90" role="document">
     <div class="modal-content">
       <div class="modal-header" style="background: #399CDF;color: white; font-weight: bold;">
         <h5 class="modal-title" id="addPedidoModalLabel">CREAR PEDIDO <i class="fas fa-1x fa-list-alt"></i></h5>
@@ -231,7 +231,7 @@
 
 <!-- Modal -->
 <div class="modal fade" id="showPedidoModal" tabindex="-1" role="dialog" aria-labelledby="showPedidoModalLabel" aria-hidden="true">
-  <div class="modal-dialog  mw-100 w-75" role="document">
+  <div class="modal-dialog  mw-100 modal-90" role="document">
     <div class="modal-content">
       <div class="modal-header" style="background: #399CDF;color: white; font-weight: bold;">
         <h5 class="modal-title" id="addPedidoModalLabel">VER PEDIDO <i class="fas fa-1x fa-list-alt"></i></h5>
@@ -569,22 +569,22 @@
 
                     <label>Precios</label>
                   </div>
-                  <div class="col-3">
+                  <div class="col-sm-6 col-md-6 col-lg-6">
                     <label>Por unidad Bs.S</label><br>
                     <span >{{formato(2,(articulo.PRECIO)? articulo.PRECIO:0)}}</span>
 
                   </div>
-                  <div class="col-3">
+                  <div class="col-sm-6 col-md-6 col-lg-6">
                     <label>Total Bs.S</label><br>
                     <span >{{formato(2,(articulo.PRECIO)? (articulo.PRECIO  * articulo.CANTIDAD):0)}}</span>
 
                   </div>
-                  <div class="col-3">
+                  <div class="col-sm-6 col-md-6 col-lg-6">
                     <label>Por unidad USD</label><br>
                     <span >{{formato(3,(articulo.precio_usd)? articulo.precio_usd:0)}}</span>
 
                   </div>
-                  <div class="col-3">
+                  <div class="col-sm-6 col-md-6 col-lg-6">
                     <label>Total USD</label><br>
                     <span >{{formato(3,(articulo.precio_usd)? (articulo.precio_usd  * articulo.CANTIDAD):0)}}</span>
 
