--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -524,7 +524,7 @@
         <div class="modal-body">
 
           <div class="container">
-            <div class="row pb-2 p-2" ng-if="clientIndex != -1">
+            <div class="row pb-2 p-2" >
                 <div class="col-md-6">
                   <p class="font-weight-bold mb-4">Informacion</p>
                   <p class="mb-1"><span class="text-muted">Principal Activo: </span> {{articulo.princ_activo}}</p>
