--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -112,7 +112,7 @@
               <div class="row mt-3 mb-5" >
 
                 <div class="col-12" ng-show="ID == null">
-                  <button type="button" class="btn btn-info" ng-click="addPedidoV2()"  >Abrir Pedido</button>
+
                 </div>
 
                 <div class="col-4">
@@ -129,6 +129,7 @@
 
                 <div class="col-4">
                   <label></label>
+                  <button type="button" class="btn btn-info" ng-click="addPedidoV2()" ng-show="ID == null"  >Abrir Pedido</button>
                   <button type="button" class="btn btn-success"  ng-show="ID != null" data-toggle="modal" data-target="#modalproduct">Agregar Productos</button>
                 </div>
 
