--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -629,7 +629,7 @@
 
       <div class="col-md-12 col-sm-12">
         <br>
-        <h5 class="text-center"> <strong>PEDIDOS {{msToTime(counter)}}</strong> </h5>
+        <h5 class="text-center"> <strong>{{counter}} PEDIDOS {{msToTime(counter)}}</strong> </h5>
         <br>
 
         <header-client></header-client>
