--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -18,6 +18,25 @@
             <strong>{{clientInvalidoMsg}}</strong>
           </div>
 
+          <div class="alert alert-info alert-dismissible fade show" ng-show="counter >= 0" role="alert">
+            <strong>Informacion!</strong> Dispone de 10 minutos para culminar su pedido
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="alert alert-warning alert-dismissible fade show" ng-show="counter >= 300000" role="alert">
+            <strong>Advertencia!</strong> Dispone de menos de 5 minutos para culminar su pedido
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="alert alert-error alert-dismissible fade show" ng-show="counter >= 599999" role="alert">
+            <strong>INFO!</strong> Su tiempo se agotado
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+
         <ul class="nav nav-tabs mb-4">
             <li class="nav-item">
               <a class="nav-link " ng-class="{ active : tabsIndex == 0 }" ng-click="goToTab(0)" >Informacion Cliente <span class="badge badge-secondary">1</span></a>
