--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -8,11 +8,15 @@
       <div class="modal-header" style="background: #399CDF;color: white; font-weight: bold;">
         <h5 class="modal-title" id="addPedidoModalLabel">CREAR PEDIDO <i class="fas fa-1x fa-list-alt"></i></h5>
 
-        <span class="float-right"  >{{msToTime(counter)}}</span>
-        
+      
+
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
+      </div>
+      <div class="card-header" ng-show="counter > 0" >
+
+          <span class="float-right"> <strong>tiempo:</strong> {{msToTime(counter)}}</span>
       </div>
       <div class="modal-body">
 
