--- a/app/comps/sidebar/sidebar.html
+++ b/app/comps/sidebar/sidebar.html
@@ -52,12 +52,12 @@
         <i class="sub_icon fas fa-list-alt" style="text-align:center"></i>
       </a>
     </li>
-    <!-- <li class="nav-item" >
+    <li class="nav-item" >
       <a href="#!/facturado" class="">
         Facturas
         <i class="sub_icon fas fa-list-alt" style="text-align:center"></i>
       </a>
-    </li> -->
+    </li>
     <!-- <li class="nav-item"  ng-show="user.role == 'admin'"  >
       <a href="#!/config" class="">
         Config
