--- a/app/comps/facturado/facturado.html
+++ b/app/comps/facturado/facturado.html
@@ -17,7 +17,7 @@
         <div class="col-md-12">
       <!-- <table datatable="" dt-options="dtOptions" dt-columns="dtColumns" class="table table-striped table-bordered">
       </table> -->
-          <table>
+          <table datatable="ng" dt-options="dtOptionsProd" >
             <thead>
                 <tr>
                 <!-- <th scope="col"><p class="text-center">#</p></th> -->
